--- a/tarefas/templates/base.html
+++ b/tarefas/templates/base.html
@@ -7,7 +7,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <title>{% block title %}Tarefas Pendentes{% endblock %}</title>
+    <title>{% block title %} TaskLy {% endblock %}</title>
 </head>
 
 <body style="padding-top: 70px;">
@@ -22,8 +22,12 @@
             <div class="collapse navbar-collapse" id="conteudo-navbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item active">
+                        <a class="nav-link active" aria-current="page" href="#">Usuario</a>
+                    </li>
+                    <li class="nav-item active">
                         <a class="nav-link active" aria-current="page" href="#">Tarefas</a>
                     </li>
+                    
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
