--- a/tarefas/templates/tarefas/index.html
+++ b/tarefas/templates/tarefas/index.html
@@ -1,16 +1,15 @@
 {% extends "base.html" %}
 
-{% block tittle %} Inicio {% endblock %}
-
 {% block content %}
     <h1>Tarefas Pendentes:</h1>
     <div class="list-group">
-        {% for tarefa in tarefas_pendentes %}
+        {% for tarefa in tarefas %}
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal{{ tarefa.id }}">
                 <h4>{{ tarefa.descricao }}</h4>
                 <small>Criado em: {{ tarefa.criacao.day }}/{{ tarefa.criacao.month }}/{{ tarefa.criacao.year }}</small>
             </button>
         {% endfor %}
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
